2010-04-21  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.12

	* src/yppasswd.c (main): Remove obsolete check for /etc/SuSE-release.

2010-04-20  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.11

	* Makefile.am: Add ypmatch_SOURCES.
	* src/yppasswd.c: Add support for MD5, SHA-256
	and SHA-512. Patch by Karel Klic <kklic@redhat.com>.

2007-01-24  Thorsten Kukuk  <kukuk@suse.de>

	* man/ypwhich.1.in: Fix spelling errors.
	* man/domainname.8.in: Likewise.
	* man/nicknames.5.in: Likewise.
	* man/ypcat.1.in: Likewise.
	* man/ypmatch.1.in: Likewise.
	* man/yppasswd.1.in: Likewise.
	* man/yppoll.8.in: Likewise.
	* man/ypset.8.in: Likewise.
	* man/yptest.8.in: Likewise.

2006-11-28  Thorsten Kukuk  <kukuk@suse.de>

	* man/ypcat.1.in: Fix typo.

2006-11-28  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.10

	* m4/gettext.m4: Upgrade to gettext-0.15.
	* m4/inttypes-h.m4: New file, from gettext-0.15.
	* m4/inttypes-pri.m4: Upgrade to gettext-0.15.
	* m4/lib-link.m4: Upgrade to gettext-0.15.
	* m4/lib-prefix.m4: Upgrade to gettext-0.15.
	* m4/lock.m4: New file, from gettext-0.15.
	* m4/longdouble.m4: Upgrade to gettext-0.15.
	* m4/nls.m4: Upgrade to gettext-0.15.
	* m4/po.m4: Upgrade to gettext-0.15.
	* m4/size_max.m4: Upgrade to gettext-0.15.
	* m4/visibility.m4: New file, from gettext-0.15.

	* po/sv.po: New swedish translation from
	Daniel Nylander <info@danielnylander.se>.

2004-06-21  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.9

	* src/yppasswd.c (main): Fix one byte overrun (reported
	by Alan Cox <alan@redhat.com>).

	* src/yppasswd.1.in: Fix yppasswd option (-p)
	Declare ypasswd, ypchsh and ypchfn as deprecated

2003-05-15  Thorsten Kukuk  <kukuk@suse.de>

	* lib/yp_all_host.c (yp_all_host): status is signed.
	* man/domainname.8.in: Add hint about programs caching
	the domainname

2002-03-07  Thorsten Kukuk  <kukuk@suse.de>

	* man/ypcat.1.in: fix typo (yset -> ypset).
        Reported by Hector Del Manzano <inq@charma.uprm.edu>.
