@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
-.\" Copyright (C) 1998, 1999, 2001, 2007 Thorsten Kukuk
+.\" Copyright (C) 1998, 1999, 2001, 2007, 2010 Thorsten Kukuk
 .\" This file is part of the yp-tools.
-.\" Author: Thorsten Kukuk <kukuk@thkukuk.de>
+.\" Author: Thorsten Kukuk <kukuk@linux-nis.org>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License version 2 as
@@ -16,7 +16,7 @@
 .\" along with this program; if not, write to the Free Software Foundation,
 .\" Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH domainname 8 "January 2007" "YP Tools @VERSION@"
+.TH domainname 8 "April 2010" "YP Tools @VERSION@"
 .SH NAME
 domainname - set or display name of current domain
 .br
@@ -69,10 +69,10 @@ use the old domainname.
 .BR ypwhich (1),
 .BR yppoll (8),
 .BR ypserv (8),
-.BR yset (8)
+.BR ypset (8)
 .LP
 .SH AUTHOR
 .B domainname
 is part of the
 .B yp-tools
-package, which was written by Thorsten Kukuk <kukuk@thkukuk.de>.
+package, which was written by Thorsten Kukuk <kukuk@linux-nis.org>.
