@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
-.\" Copyright (C) 1998, 1999, 2001, 2002, 2007 Thorsten Kukuk
+.\" Copyright (C) 1998, 1999, 2001, 2002, 2007, 2010 Thorsten Kukuk
 .\" This file is part of the yp-tools.
-.\" Author: Thorsten Kukuk <kukuk@thkukuk.de>
+.\" Author: Thorsten Kukuk <kukuk@linux-nis.org>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License version 2 as
@@ -16,7 +16,7 @@
 .\" along with this program; if not, write to the Free Software Foundation,
 .\" Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH ypset 8 "January 2007" "YP Tools @VERSION@"
+.TH ypset 8 "April 2010" "YP Tools @VERSION@"
 .SH NAME
 ypset - bind ypbind to a particular NIS server
 .SH SYNOPSIS
@@ -31,7 +31,7 @@ ypset - bind ypbind to a particular NIS server
 .LP
 .SH DESCRIPTION
 In  order  to run
-.BR ypset,
+.BR ypset ,
 .B ypbind
 must be initiated with the
 .B -ypset
@@ -77,7 +77,7 @@ or an IP address. This will work only if the node has a current valid
 binding for the domain in question, and
 .B ypbind
 has been set to allow use of
-.BR ypset.
+.BR ypset .
 In most  cases,
 .I server
 should be specified as an IP address.
@@ -86,7 +86,7 @@ should be specified as an IP address.
 .TP
 .BI \-d " domain"
 Specify a domain other than the default domain as returned by
-.BR domainname (1).
+.BR domainname (8).
 .TP
 .BI \-h " hostname"
 Set the NIS binding on host
@@ -105,4 +105,4 @@ Set the NIS binding on host
 .B ypset
 is part of the
 .B yp-tools
-package, which was written by Thorsten Kukuk <kukuk@thkukuk.de>.
+package, which was written by Thorsten Kukuk <kukuk@linux-nis.org>.
