@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
-.\" Copyright (C) 2002, 2007 Thorsten Kukuk
+.\" Copyright (C) 2002, 2007, 2010 Thorsten Kukuk
 .\" This file is part of the yp-tools.
-.\" Author: Thorsten Kukuk <kukuk@thkukuk.de>
+.\" Author: Thorsten Kukuk <kukuk@linux-nis.org>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License version 2 as
@@ -16,7 +16,7 @@
 .\" along with this program; if not, write to the Free Software Foundation,
 .\" Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH yptest 8 "January 2007" "YP Tools @VERSION@"
+.TH yptest 8 "April 2010" "YP Tools @VERSION@"
 .SH NAME
 yptest - test NIS configuration
 .SH SYNOPSIS
@@ -34,7 +34,7 @@ Be quiet, don't print messages
 .TP
 .BI \-d " domainname"
 Specify a domain other than the default domain as returned by
-.BR domainname (1).
+.BR domainname (8).
 This option is not supported by all tests.
 .TP
 .BI \-h " hostname"
@@ -75,4 +75,4 @@ option).
 .B yptest
 is part of the
 .B yp-tools
-package, which was written by Thorsten Kukuk <kukuk@thkukuk.de>.
+package, which was written by Thorsten Kukuk <kukuk@linux-nis.org>.
